--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -314,6 +314,7 @@ cart-remove-button .icon-remove {
 
   .cart-items *.right {
     text-align: center;
+    padding: 0;
   }
 
   tr.cart-item td .price {
@@ -512,5 +513,8 @@ td.cart-item__price .product-option s{
 
 }
 
-
-
+@media screen and (max-width: 749px) {
+  tr.cart-item td {
+    padding-bottom: 0px;
+  }
+}
