--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1,20 +1,3 @@
-<div class="stickyBG">
-  <div class="sticky-add-to-cart">
-    <div class="sac-product">{{ product.title | escape }}<span class="sac-color"></span></div>
-    <div class="sac-wrap">
-      <div class="sac-price etica">
-                  {%- render 'price', product: product, use_variant: true, show_badges: false, price_class: 'price--large' -%}
-              </div>
-              <a href="javascript:void(0)" class="btn atc" id="sacText">
-                {%- if product.selected_or_first_available_variant.available -%}
-                  {{ 'products.product.add_to_cart' | t }}
-                {%- else -%}
-                  {{ 'products.product.sold_out' | t }}
-                {%- endif -%}
-              </a>
-    </div>
-    </div>
-</div>
 
 <!-- <section class="page-width section-{{ section.id }}-padding"> -->
 
@@ -391,7 +374,7 @@
                   {%- for option in product.options_with_values -%}
                     <div class="product-form__input product-form__input--dropdown">
                       <label class="form__label" for="Option-{{ section.id }}-{{ forloop.index0 }}">
-                        
+                        <!-- todo: update other variant options text within liquid instead of jquery -->
                         {% if option.name == 'Size' %} Select a size. {% else %} {{ option.name }}  {% endif %}
                       </label>
                       <div class="select">
@@ -525,7 +508,23 @@
                           </div>
                       </button>
                     {% endif %}
-                    
+                    <div class="stickyBG">
+                      <div class="sticky-add-to-cart">
+                        <div class="sac-product">{{ product.title | escape }}<span class="sac-color"></span></div>
+                        <div class="sac-wrap">
+                          <div class="sac-price etica">
+                                      {%- render 'price', product: product, use_variant: true, show_badges: false, price_class: 'price--large' -%}
+                                  </div>
+                                  <a href="javascript:void(0)" class="btn atc js-go-cart-add-to-cart" id="sacText">
+                                    {%- if product.selected_or_first_available_variant.available -%}
+                                      {{ 'products.product.add_to_cart' | t }}
+                                    {%- else -%}
+                                      {{ 'products.product.sold_out' | t }}
+                                    {%- endif -%}
+                                  </a>
+                        </div>
+                        </div>
+                    </div>
                     {%- if block.settings.show_dynamic_checkout -%}
                       {{ form | payment_button }}
                     {%- endif -%}
@@ -596,12 +595,22 @@
           {% else %}
             <div style="width: 100%;">
           {% endif %}
-            <strong>Order Processing:</strong> <span id="orderProcessing">
-              {% if product.metafields.my_fields.lead_time != blank %}
-             {{ product.metafields.my_fields.lead_time }}.
-             {% else %}
-              1–3 days.
-              {% endif %}
+            <strong>Order Processing:</strong> <span id="orderProcessing" style="display: inline-block;">
+              {% assign current_variant = product.selected_or_first_available_variant %}
+              {% for variant in product.variants %}
+              <span class="variant__description" data-variant-id="{{variant.id}}" {% if product.selected_or_first_available_variant.id == variant.id %} 
+              style="display: block;"  
+            {% endif %} > 
+            {% if variant.metafields.custom.lead_time != blank %}
+                {{ variant.metafields.custom.lead_time }}
+                {% else %}
+                1–3 days.
+                {% endif %}
+              </span>
+            {% endfor %}
+            <style>.variant__description {
+              display:none;
+            }</style>
             </span>            
             </div>
             {% if product.metafields.my_fields.thirty_day_returns == true %}
