--- a/sections/metafield-product.liquid
+++ b/sections/metafield-product.liquid
@@ -36,24 +36,6 @@
 </div> -->
 
 
-	<div class="stickyBG">
-		<div class="sticky-add-to-cart">
-			<div class="sac-product">{{ product.title | escape }}<span class="sac-color"></span></div>
-			<div class="sac-wrap">
-				<div class="sac-price etica">
-                  	{%- render 'price', product: product, use_variant: true, show_badges: false, price_class: 'price--large' -%}
-                </div>
-              	<a href="javascript:void(0)" class="btn atc" id="sacText">
-                  {%- if product.selected_or_first_available_variant.available -%}
-                  	{{ 'products.product.add_to_cart' | t }}
-                  {%- else -%}
-                  	{{ 'products.product.sold_out' | t }}
-                  {%- endif -%}
-              	</a>
-			</div>
-      </div>
-	</div>
-
             <h1 class="product-name-mobile" {{ block.shopify_attributes }}>
               {{ product.title | escape }}
             </h1>
@@ -138,7 +120,7 @@
                   {%- endif -%}
                 {%- endcapture -%}
                 {%- assign media_index = media_index | plus: 1 -%}
-                <li id="Slide-Thumbnails-{{ section.id }}-0" class="thumbnail-list__item slider__slide{% if section.settings.hide_variants and variant_images contains featured_media.src %} thumbnail-list_item--variant{% endif %}" data-target="{{ section.id }}-{{ featured_media.id }}" data-media-position="{{ media_index }}">
+                <li data-thumbnail-color="{{ image.alt }}" id="Slide-Thumbnails-{{ section.id }}-0" class="thumbnail-list__item slider__slide{% if section.settings.hide_variants and variant_images contains featured_media.src %} thumbnail-list_item--variant{% endif %}" data-target="{{ section.id }}-{{ featured_media.id }}" data-media-position="{{ media_index }}">
                   <button class="thumbnail global-media-settings global-media-settings--no-shadow {% if featured_media.preview_image.aspect_ratio > 1 %}thumbnail--wide{% else %}thumbnail--narrow{% endif %}"
                     aria-label="{%- if featured_media.media_type == 'image' -%}{{ 'products.product.media.load_image' | t: index: media_index }}{%- elsif featured_media.media_type == 'model' -%}{{ 'products.product.media.load_model' | t: index: media_index }}{%- elsif featured_media.media_type == 'video' or featured_media.media_type == 'external_video' -%}{{ 'products.product.media.load_video' | t: index: media_index }}{%- endif -%}"
                     aria-current="true"
@@ -172,7 +154,7 @@
                     {%- endif -%}
                   {%- endcapture -%}
                   {%- assign media_index = media_index | plus: 1 -%}
-                   <li id="Slide-Thumbnails-{{ section.id }}-{{ forloop.index }}" class="thumbnail-list__item slider__slide{% if section.settings.hide_variants and variant_images contains media.src %} thumbnail-list_item--variant{% endif %}" data-target="{{ section.id }}-{{ media.id }}"  data-media-position="{{ media_index }}">
+                   <li  data-thumbnail-color="{{ media.alt }}"  id="Slide-Thumbnails-{{ section.id }}-{{ forloop.index }}" class="thumbnail-list__item slider__slide{% if section.settings.hide_variants and variant_images contains media.src %} thumbnail-list_item--variant{% endif %}" data-target="{{ section.id }}-{{ media.id }}"  data-media-position="{{ media_index }}">
                     {%- if media.media_type == 'model' -%}
                       <span class="thumbnail__badge" aria-hidden="true">
                         {%- render 'icon-3d-model' -%}
@@ -491,6 +473,23 @@
                           </svg>
                         </div>
                     </button>
+                    <div class="stickyBG">
+                      <div class="sticky-add-to-cart">
+                        <div class="sac-product">{{ product.title | escape }}<span class="sac-color"></span></div>
+                        <div class="sac-wrap">
+                          <div class="sac-price etica">
+                                      {%- render 'price', product: product, use_variant: true, show_badges: false, price_class: 'price--large' -%}
+                                  </div>
+                                  <a href="javascript:void(0)" class="btn atc js-go-cart-add-to-cart" id="sacText">
+                                    {%- if product.selected_or_first_available_variant.available -%}
+                                      {{ 'products.product.add_to_cart' | t }}
+                                    {%- else -%}
+                                      {{ 'products.product.sold_out' | t }}
+                                    {%- endif -%}
+                                  </a>
+                        </div>
+                        </div>
+                    </div>
                     {%- if block.settings.show_dynamic_checkout -%}
                       {{ form | payment_button }}
                     {%- endif -%}
@@ -519,24 +518,22 @@
                       {% else %}
                         <div style="width: 100%;">
                       {% endif %}
-                        <strong>Order Processing:</strong> <span id="orderProcessing">
-                          <!-- {% if product.metafields.my_fields.lead_time != blank %}
-                         {{ product.metafields.my_fields.lead_time }}.
-                         {% else %}
+                      <strong>Order Processing:</strong> <span id="orderProcessing" style="display: inline-block;">
+                        {% assign current_variant = product.selected_or_first_available_variant %}
+                        {% for variant in product.variants %}
+                        <span class="variant__description" data-variant-id="{{variant.id}}" {% if product.selected_or_first_available_variant.id == variant.id %} 
+                        style="display: block;"  
+                      {% endif %} > 
+                      {% if variant.metafields.custom.lead_time != blank %}
+                          {{ variant.metafields.custom.lead_time }}
+                          {% else %}
                           1–3 days.
-                          {% endif %} -->
-                          {% assign current_variant = product.selected_or_first_available_variant %}
-                          {% for variant in product.variants %}
-                          <div class="variant__description" data-variant-id="{{variant.id}}" {% if product.selected_or_first_available_variant.id == variant.id %} 
-                          style="display: block;"  
-                        {% endif %} > 
-                            
-                            <p>{{ variant.metafields.custom.lead_time }}</p>
-                          </div>
-                        {% endfor %}
-                        <style>.variant__description {
-                          display:none;
-                        }</style>
+                          {% endif %}
+                        </span>
+                      {% endfor %}
+                      <style>.variant__description {
+                        display:none;
+                      }</style>
                         </span>            
                         </div>
                         {% if product.metafields.my_fields.thirty_day_returns == true %}
