yotpo styles from brian
Former-commit-id: 535680d192431823773f6a468565d8d53185fb9c
Former-commit-id: c3e7c632d62fce186238abbe2281ff9a43c22b17
Former-commit-id: 9ef2db1f756af58aab7206ad72dd1a01f15acffa
Former-commit-id: d986858df55e800f8377eb24007dd36d622f72bb
Former-commit-id: 69d980537df4d702fdf83fdda9600a91af29aff3

--- a/assets/base.css
+++ b/assets/base.css
@@ -3974,7 +3974,7 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 }
 
 
-/* REVIEWS */
+/* REVIEWS PAGE */
 
 .reviews { max-width: 800px; margin: 0 auto var(--sectionBottom) auto; }
 
@@ -4065,40 +4065,112 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 .home .review-text p:before { content: "“"; }
 .home .review-text p:after { content: "”"; }
 
-.product-review {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin-bottom: var(--sectionBottom);
+  /* YOTPO ELEMENTS OF REVIEWS PAGE */
+  .product-review {
+  	display: flex;
+  	justify-content: space-between;
+  	align-items: center;
+  	margin-bottom: var(--sectionBottom);
+  }
+
+  .pr-reverse { flex-direction: row-reverse;}
+
+  .pr-text, .pr-img { width: 45%; position: relative; }
+
+  .prt-name {
+  	font-weight: 700;
+  	font-size: 2.4rem;
+  	margin-bottom: .3em;
+  }
+
+  .pr-text .review-name { margin-top: 1em; }
+  .pr-text .review-title { margin-bottom: 3em; }
+
+  .pr-img img { width: 100%; }
+  .pr-img img.emf { position: absolute; left: 20px; bottom: 20px; width: 130px;}
+
+  .pr-text .standalone-bottomline { justify-content: flex-start; }
+
+  .standalone-bottomline { 
+    display: flex; 
+    justify-content: center; 
+    margin-bottom: 10px !important;  
+  }
+
+.yotpo .yotpo-testimonials-custom-tab .yotpo-modal-content .primary-color-btn,
+#yotpo-testimonials > div.yotpo-modal-dialog > div.yotpo-modal-content > div.yotpo-popup-box-medium.yotpo-modal-bottom-line > input,
+#write-review-tabpanel-testimonials > div.form-element.submit-button > input {
+  font-family: "UntitledSans", sans-serif!important;
+  font-weight: 700!important;
+  font-size: 16px;
+  background: #C67A26;
+  padding: 0.75em 1.5em;
+  text-decoration: none;
+  border: 0;
+  border-radius: 0!important;
+  -webkit-appearance: none;
+  appearance: none;
+  line-height: 1.2em;
+  letter-spacing: 0.06rem;
 }
 
-	.pr-reverse { flex-direction: row-reverse;}
-
-.pr-text, .pr-img { width: 45%; position: relative; }
-
-.prt-name {
-	font-weight: 700;
-	font-size: 2.4rem;
-	margin-bottom: .3em;
+#yotpo-testimonials-product-reviews > div.yotpo-review.yotpo-regular-box.yotpo-regular-box-filters-padding > div.yotpo-main > div.yotpo-review-wrapper,
+.yotpo .yotpo-review .rest-content-collapsed {
+  font-size: 16px;
 }
 
-.pr-text .review-name { margin-top: 1em; }
-.pr-text .review-title { margin-bottom: 3em; }
+#yotpo-testimonials-custom-tab .yotpo-main .product-link {
+  font-family: UntitledSans, sans-serif !important; 
+  font-size: 16px;
+}
 
-.pr-img img { width: 100%; }
+#yotpo-testimonials-custom-tab .yotpo-main .product-link:hover{
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+#yotpo-testimonials-custom-tab .yotpo-modal-bottom-line .yotpo-bottomline {
+  text-align: center;
+  float: none;
+}
+
+  /* END YOTPO ELEMENTS OF REVIEWS PAGE */
+
+/* END REVIEWS PAGE */
+
+/* YOTPO GLOBAL CSS */
 
 .yotpo-hearts {
-	margin-bottom: 2em;
+  margin-bottom: 2em;
 }
 
-.pr-img img.emf { position: absolute; left: 20px; bottom: 20px; width: 130px;}
+  /* YOTPO STAR RATING */
+  .yotpo a.text-m:hover { 
+    color: #000 !important;
+    text-decoration: underline!important;
+    text-underline-offset: 3px;
+  }
+  .yotpo-bottomline a.text-m { 
+    font-family: lft-etica-mono,sans-serif !important;
+    color: #000!important;
+    padding-left: 1em !important; 
+    font-size: 1.6rem !important;
+  }
+  /* END YOTPO STAR RATING */
 
-.text-m {
-	font-family: lft-etica-mono,sans-serif !important;
-	padding-left: 1em !important; font-size: 1.6rem !important; color: #000 !important;
+.suggested-topics, .filters-container-title, .yotpo-label-container  { display: none !important; }
+.bottom-line-items-container .avg-score { font-family: UntitledSans, sans-serif !important; font-weight: 700; font-size: 2rem !important; color: #000 !important;  }
+.reviews-qa-label { color: #000 !important; font-size: 1.6rem !important; }
+.main-widget .rating-stars-container { height: auto !important; margin: 0 .5em !important; }
+.yotpo-regular-box.yotpo-bottomline.bottom-line-items-container { padding-top: 0px; margin: 0 10px 10px 10px; }
+
+.yotpo .write-question-wrapper *,
+.yotpo .write-review-wrapper * {
+  font-family: UntitledSans, sans-serif !important; 
+  font-size: 1.6rem !important; 
 }
+.yotpo .new-yotpo-small-box { margin: 20px 10px 0 10px; border-bottom: 1px solid #939393;}
 
-.yotpo a.text-m, .yotpo a.text-m:hover { color: #000 !important; }
 
 .yotpo-nav-wrapper { border-color: #000 !important; }
 .yotpo-nav-wrapper span { font-family:UntitledSans, sans-serif !important; color: #000 !important; text-transform: uppercase; }
@@ -4111,13 +4183,18 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 .yotpo-label { display: none !important; }
 .yotpo a.yotpo-page-element { color: #000 !important; }
 .yotpo-footer { margin-left: 0 !important; }
-.content-review { line-height: 1.4em !important; }
+.content-review { line-height: 1.6em !important; }
 
 .yotpo-pictures-widget { margin-bottom: var(--sectionBottom) !important; }
 .yotpo.bottomLine { min-height: 24px; }
 
 .yotpo-filter-tag.yotpo-icon-btn.yotpo-hidden { display: none !important; }
-.write-question-review-buttons-container .write-question-review-button .write-question-review-button-text {font-family:UntitledSans, sans-serif !important; font-weight: normal !important; color: #000 !important; }
+.yotpo .main-widget .write-question-review-buttons-container .write-question-review-button .write-question-review-button-text {
+  font-family:"UntitledSans", sans-serif; 
+  font-weight: normal; 
+  color: #000; 
+  font-size: 16px;
+}
 
 .y-input { margin-bottom: 10px !important; }
 .y-label.yotpo-header-title { font-weight: 700 !important; }
@@ -4126,7 +4203,220 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 .yotpo .yotpo-first-review .yotpo-first-review-stars .yotpo-icon-star { font-size: 24px !important; }
 .yotpo-first-review-content .write-question-button { background: #C67A26 !important; color: #fff !important; font-weight: 700; }
 
-/* END REVIEWS */
+@media all and (max-width: 600px) {
+  .yotpo-footer { display: flex; }
+  .yotpo-helpful { margin-left: auto !important; }
+}
+
+#write-review-tabpanel-main-widget > div.form-element.submit-button > input,
+#write-question-tabpanel > div.form-element.submit-button > input,
+button.yotpo-lightbox-product-button {
+  font-family: "UntitledSans", sans-serif!important;
+  font-weight: 700!important;
+  font-size: 16px;
+  background: #C67A26;
+  padding: 0.75em 1.5em;
+  text-decoration: none;
+  border: 0;
+  border-radius: 0!important;
+  -webkit-appearance: none;
+  appearance: none;
+  line-height: 1.2em;
+  letter-spacing: 0.06rem;
+}
+
+div.yotpo-lightbox-container.yotpo-pictures-gallery.yotpo-active-display {
+  border: 2px solid #C57A29!important;
+  border-radius: 0!important;
+}
+
+div.yotpo-lightbox-slider-container,
+div.yotpo-lightbox-content-container {
+  border-radius: 0!important;
+}
+
+h2.yotpo-lightbox-product-name {
+  font-family: "UntitledSans", sans-serif!important;
+  letter-spacing: 0.06rem;
+  text-align: left;
+}
+
+.yotpo, 
+.bottom-line-items-container .reviews-qa-labels-container .reviews-qa-label, 
+.yotpo span, 
+.yotpo p, 
+.yotpo a, 
+.yotpo img, 
+.yotpo i, 
+.yotpo strong, 
+.yotpo sup, 
+.yotpo ul, 
+.yotpo li, 
+.yotpo form, 
+.yotpo label {
+  font-family: "UntitledSans", sans-serif!important;
+  letter-spacing: 0.06rem;
+}
+
+.yotpo .yotpo-review .yotpo-header .yotpo-header-element .y-label.yotpo-review-date,
+.yotpo a.yotpo-page-element, 
+.yotpo .yotpo-review .yotpo-footer .yotpo-helpful .yotpo-sum,
+span.y-label.question-date,
+.yotpo .yotpo-question .yotpo-footer .yotpo-helpful .yotpo-sum,
+.yotpo .y-label, .yotpo span.y-label,
+.bottom-line-items-container .reviews-qa-labels-container span.reviews-qa-label {
+  font-family: lft-etica-mono,sans-serif!important;
+}
+
+.yotpo .yotpo-review .yotpo-footer .yotpo-helpful span.label-helpful,
+.yotpo .yotpo-review .yotpo-footer .y-label,
+.yotpo .yotpo-question .yotpo-footer .y-label,
+.yotpo .yotpo-comment .yotpo-header .yotpo-header-element .y-label.yotpo-user-name, 
+.yotpo .yotpo-question .yotpo-header .yotpo-header-element .y-label.yotpo-user-name,
+.yotpo .yotpo-question .yotpo-footer .yotpo-helpful span.y-label.label-helpful{
+  font-family: "UntitledSans", sans-serif!important;
+}
+
+.yotpo .yotpo-review .yotpo-footer .y-label:hover {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+.yotpo .transparent-color-btn span.yotpo-icon,
+.yotpo .yotpo-review .yotpo-footer .yotpo-helpful .yotpo-sum,
+.yotpo .yotpo-review .yotpo-footer .yotpo-helpful span.label-helpful {
+  color: #6A6C77!important;
+}
+
+.yotpo .yotpo-review .yotpo-main .content-title,
+.yotpo .yotpo-review .yotpo-main .content-review,
+.yotpo div.content-question.yotpo-font-bold,
+.yotpo div.content-question {
+  font-size: 16px;
+}
+
+.yotpo .yotpo-comment .yotpo-header .yotpo-header-element .y-label.yotpo-user-name, 
+.yotpo .yotpo-question .yotpo-header .yotpo-header-element .y-label.yotpo-user-name,
+.yotpo .yotpo-question .yotpo-footer .yotpo-helpful span.y-label.label-helpful {
+}
+
+.reviews-header span.reviews-amount {
+  font-size: 18px;
+}
+
+.yotpo .yotpo-review .yotpo-footer .footer-actions a.social-link.popup-link:hover {
+  color: #000 !important;
+  text-decoration: underline!important;
+  text-underline-offset: 3px;
+}
+
+.yotpo .yotpo-review .yotpo-header .yotpo-header-element .y-label.yotpo-user-title, 
+.yotpo-lightbox.yotpo-lightbox-new.yotpo .yotpo-modal.yotpo-modal-active .yotpo-lightbox-container .yotpo-review .yotpo-header .yotpo-header-element .yotpo-review-date {
+  color:#000;
+}
+
+.filters-dropdown .yotpo-dropdown-button .selected,
+span.filters-dropdown,
+span.yotpo-icon.yotpo-icon-down-triangle {
+  letter-spacing: normal;
+}
+
+.filters-dropdown .yotpo-dropdown-button,
+.filters-container .free-text-search-input,
+.write-question-review-buttons-container .write-question-review-button {
+  letter-spacing: normal;
+  border-radius: 0!important;
+  border: 1px solid #939393!important;
+}
+
+.sort-drop-down .selected-bold {
+  color: #000!important;
+}
+
+.reviews-header .yotpo-drop-down-layout .yotpo-dropdown .list-category a.non-selected-item,
+.reviews-header .yotpo-drop-down-layout .yotpo-dropdown li.list-category:hover a.non-selected-item {
+  color: #000!important;
+}
+
+.reviews-header .yotpo-drop-down-layout .yotpo-dropdown .list-category .selected-item {
+  color: #000!important;
+}
+
+.reviews-header .yotpo-drop-down-layout .yotpo-dropdown .list-category .selected-item:hover {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+.reviews-header .yotpo-drop-down-layout .yotpo-dropdown li.list-category:hover {
+  background-color: transparent!important;
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+.filters-container .yotpo-drop-down-layout .yotpo-dropdown li.list-category:hover {
+  background-color: transparent!important;
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+.filters-container .yotpo-drop-down-layout .yotpo-dropdown .list-category a.selected-item {
+  color: #000!important;
+  font-weight: 700!important;
+}
+
+.filters-container .yotpo-drop-down-layout .yotpo-dropdown .list-category a.non-selected-item,
+.filters-container .yotpo-drop-down-layout .yotpo-dropdown li.list-category:hover a.non-selected-item{
+  color: #000!important;
+}
+
+.reviews-header .yotpo-drop-down-layout .yotpo-dropdown,
+.filters-container .yotpo-drop-down-layout .yotpo-dropdown {
+  border-radius: 0;
+}
+
+.yotpo .yotpo-nav-dropdown span:not(.yotpo-icon) {
+  color: #000!important;
+}
+
+.yotpo .yotpo-nav-dropdown .selected:hover {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+div.content-question > a:hover {
+  text-decoration: underline;
+  color: #d9661f !important;
+}
+
+.yotpo .filters-container .desktop-clear-all-btn {
+  border: solid 1px #939393;
+  border-radius: 0;
+}
+
+.yotpo .yotpo-nav ul .yotpo-nav-tab span {
+  font-size: 18px;
+}
+
+.yotpo .yotpo-review .yotpo-main .yotpo-review-images-wrapper .image-review {
+  border-radius: 0!important;
+}
+
+.yotpo .write-review .yotpo-header .yotpo-header-title,
+.yotpo .write-review .yotpo-header .y-label, 
+.yotpo .form-group .form-element .y-label,
+.yotpo .write-review .yotpo-footer .y-label,
+.yotpo #write-question-tabpanel h2,
+.yotpo #write-question-tabpanel div.yotpo-mandatory-explain,
+.yotpo #write-review-tabpanel-main-widget div.yotpo-mandatory-explain {
+ font-family: "UntitledSans", sans-serif!important;
+ color: #000;
+}
+
+textarea.y-input.yotpo-text-box {
+  margin-top: 0;
+}
+
+/* END YOTPO GLOBAL CSS */
 
 /* SHOP ALL */
 
@@ -4644,24 +4934,6 @@ h1.product__title, .product-text h1, .product-name-mobile {
 	left: 0;
 }
 */
-
-/* yotpo */
-.standalone-bottomline { display: flex; justify-content: center; margin-bottom: 10px !important;  }
-.pr-text .standalone-bottomline { justify-content: flex-start; }
-.yotpo-bottomline a.text-m { font-family: UntitledSans, sans-serif !important; }
-.suggested-topics, .filters-container-title, .yotpo-label-container  { display: none !important; }
-.bottom-line-items-container .avg-score { font-family: UntitledSans, sans-serif !important; font-weight: 700; font-size: 2rem !important; color: #000 !important;  }
-.reviews-qa-label { color: #000 !important; font-size: 1.6rem !important; }
-.main-widget .rating-stars-container { height: auto !important; margin: 0 .5em !important; }
-.yotpo-regular-box.yotpo-bottomline.bottom-line-items-container { padding-top: 0px; margin: 0 10px 10px 10px; }
-.yotpo .write-question-wrapper * {  font-family: UntitledSans, sans-serif !important; font-size: 1.6rem !important; }
-.yotpo .new-yotpo-small-box { margin: 20px 10px 0 10px; border-bottom: 1px solid #939393;}
-
-@media all and (max-width: 600px) {
-	.yotpo-footer { display: flex; }
-	.yotpo-helpful { margin-left: auto !important; }
-	
-}
 
 
 /* sauna enclosure kit */
