--- a/assets/dark.css
+++ b/assets/dark.css
@@ -55,10 +55,7 @@
     background: rgba(67,60,60,.55);
   }
 
-  .dark .product-media-modal, .dark .eufhEh.eufhEh, .dark .go-cart-item__quantity-number  {
-    background-color: #000;
-  }
-
+  .dark .product-media-modal, .dark .eufhEh.eufhEh, .dark .go-cart-item__quantity-number, 
  .dark .select__select,
  .dark .customer select, .dark .product-media-modal, .dark .eufhEh.eufhEh, .dark .go-cart-item__quantity-number, .dark .go-cart__mini-cart, .dark .go-cart__mini-cart.js-go-cart-mini-cart.is-open::before {
     background-color: #000;
@@ -78,13 +75,18 @@
   .dark .opening a, .dark .opening h3, .dark .opening ul, .dark .opening li, 
   .dark .opening li::marker, .dark .opening span,
   .dark .customer, .dark .customer h1, .dark .customer a, .dark .shopify-challenge__message,
-  .dark .customer thead th, .dark .customer tbody td, .dark .customer strong, .dark .go-cart-item__title, .dark .go-cart-item__quantity-number 
+  .dark #dcodeButtonLabel, .dark input#dcodeInput,
+  .dark .customer thead th, .dark .customer tbody td, .dark .customer strong, .dark .go-cart-item__title, .dark .go-cart-item__quantity-number, .dark .yc-col-head, .dark .ycc-lineitem, .dark .cbb-shipping-rates-calculator-header
   {
     color: #fff !important;
   }
 
   .dark .gHjTpK.gHjTpK a {
     color: #fff !important;
+  }
+
+  .dark .dcDiscountBox {
+    background-color: #000;
   }
 
 
@@ -134,31 +136,8 @@
   }
   .dark .yotpo a.text-m, .dark .yotpo a.text-m:hover { color: #FFF8E7 !important; }
   .dark .filters-dropdown .yotpo-dropdown-button { background: #000 !important; }
-  .dark .yotpo .main-widget .write-question-review-buttons-container .write-question-review-button .write-question-review-button-text,
-  .dark .filters-container .free-text-search-input,
-  .dark .yotpo .form-group .form-element .y-input,
-  .dark .yotpo .yotpo-nav-dropdown span:not(.yotpo-icon),
-  .dark .filters-container .yotpo-drop-down-layout .yotpo-dropdown .list-category a.selected-item,
-  .dark .filters-container .yotpo-drop-down-layout .yotpo-dropdown .list-category a.non-selected-item, 
-  .dark .filters-container .yotpo-drop-down-layout .yotpo-dropdown li.list-category:hover a.non-selected-item,
-  .dark .reviews-header .yotpo-drop-down-layout .yotpo-dropdown .list-category a.non-selected-item,
-  .dark .yotpo .transparent-color-btn span.yotpo-icon, 
-  .dark .yotpo .yotpo-review .yotpo-footer .yotpo-helpful .yotpo-sum, 
-  .dark .yotpo .yotpo-review .yotpo-footer .yotpo-helpful span.label-helpful, 
-  .dark .yotpo-lightbox.yotpo-lightbox-new.yotpo .yotpo-modal.yotpo-modal-active .yotpo-lightbox-container .yotpo-review .yotpo-footer .footer-actions .share-options-wrapper .share-options .social-link { 
-    color: #FFF8E7 !important; 
-  }
-
-  .dark .yotpo-drop-down-layout .yotpo-dropdown,
-  .dark div.y-slider-container,
-  .dark .yotpo-lightbox.yotpo-lightbox-new.yotpo .yotpo-modal.yotpo-modal-active .yotpo-lightbox-container .yotpo-lightbox-content-container {
-    background: #000!important;
-  }
-
-  .dark .yotpo-lightbox.yotpo-lightbox-new.yotpo .yotpo-modal.yotpo-modal-active .yotpo-lightbox-container.yotpo-active-display {
-    border: solid 1px #e3e3e3!important;
-  }
-
+  .dark .write-question-review-buttons-container .write-question-review-button .write-question-review-button-text { color: #FFF8E7 !important; }
+  
 	.dark .compare-panel-on { background: #C67A26; color: #FFF8E7; }
 	.dark .cp-shield { color: #FFF8E7; background: #6E1500; border: 0;}
     
