--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -100,7 +100,7 @@
             </a>
           </h3>
           {% endcomment %}
-          <div class="yotpo bottomLine"
+          <!-- <div class="yotpo bottomLine"
      data-appkey="Le9cnWSpkRXYOrSx1cl92vGTKh5KKrlOuuk2BHtx"
      data-domain="{{shop.permanent_domain | escape }}"
      data-product-id="{{ product.id }}"
@@ -124,7 +124,7 @@
   {%- if yotpo_offload_content == 'yes' and yotpo_bottomline_obsolete != true -%}
     {{ product.metafields.yotpo.bottomline }}
   {%- endif %}
-</div>
+</div> -->
           <a href="{{ card_product.url }}" class="pt-name">{{ card_product.title | escape }}</a>
           
           <div style="clear:both;"></div>
