yotpo style updates from brian
Former-commit-id: 777f59fcb176359b447fc1db790077addc706b9e
Former-commit-id: 68e6126fd7bd180fac43e3743d4a85570bda0e2d
Former-commit-id: c749f670e4a84b2c15786163bc4ac1e64a69ddf3
Former-commit-id: fc23d23fc00c6ba7bde30b2b137ccd1358225d87
Former-commit-id: e148d8f5a861d72074a1d7457d778e66df064077

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -476,7 +476,7 @@ a.product__text {
 }
 
 .product .price__container {
-  margin-bottom: 0.5rem;
+ /* margin-bottom: 0.5rem; */
 }
 
 .product .price dl {
