--- a/sections/components-page.liquid
+++ b/sections/components-page.liquid
@@ -1,3 +1,6 @@
+{{ 'component-loading-overlay.css' | asset_url | stylesheet_tag }}
+{{ 'component-card.css' | asset_url | stylesheet_tag }}
+{{ 'component-price.css' | asset_url | stylesheet_tag }}	
 
 <div class="photo-headerBG noMargin" style="background-image:url({{ 'sauna-components.jpg' | asset_url }}); background-position: 50% 0; ">
 		<div class="ph-width">
