--- a/sections/reviews-page.liquid
+++ b/sections/reviews-page.liquid
@@ -402,7 +402,7 @@
 <div class="divider"></div>
 
     <h2>What our Customer are Saying</h2>
-<section style="max-width: 800px;">
+<section style="max-width: 800px;" class="what-customers">
     <div id='yotpo-testimonials-custom-tab'></div>
 </section>
 
